Controllers createDenuncia/estatisticas/showDenuncias created and methods implemented

--- a/app/views/createDenuncia.html
+++ b/app/views/createDenuncia.html
@@ -7,7 +7,7 @@
 	<form name="newDenunciaForm" ng-submit="createDenuncia()">
 		<div class="container">
   			<table style="float: left;" width="360">
-	  			<th><label>Selecione o tipo de Ameaça</label></th>
+	  			<th><label>Selecione o tipo de Ameaça:</label></th>
 		  			<tr>
 		    			<td>
 					  		 <div class="input-group" style="margin-bottom: 10px;">
