--- a/app/views/signUp.html
+++ b/app/views/signUp.html
@@ -1,5 +1,5 @@
 <svg width="800" height="150">
-  <rect x="10" y="20" rx="10" ry="10" width="700" height="75"
+  <rect x="15" y="20" rx="10" ry="10" width="700" height="75"
   style="fill:#ffab00;stroke:grey;stroke-width:0;opacity:1"/>
   <text fill="#ffffff" font-size="30" font-family="Verdana" x="300" y="70">Cadastro</text>
 </svg>
@@ -79,7 +79,7 @@
 					<button type="submit" ng-disabled="newUserForm.$invalid" class="btn btn-lg btn-success" >Cadastrar</button>
 				</div>
 				<div class="col-md-6">
-					<button type="reset" class="btn btn-lg btn-cancel" >Cancelar</button>
+					<button type="reset" ui-sref="main" class="btn btn-lg btn-cancel" >Cancelar</button>
 				</div>
 			</div>
 		</div>
